--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "technoholic",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.resend.com/emails",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,8 +10,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "firebase": "^10.8.0",
+    "html2canvas": "^1.4.1",
+    "http-proxy-middleware": "^2.0.6",
+    "jspdf": "^2.5.1",
+    "next": "14.1.0",
+    "nodemailer": "^6.9.9",
+    "react": "^18.2.0",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-easy-crop": "^5.0.5",
+    "react-icons": "^5.0.1",
+    "react-image-crop": "^11.0.5",
+    "react-toastify": "^10.0.4"
   }
 }
